# sniplias

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: release.yml
scripts/: install.sh
src/: main.rs  update.rs
src/app/: event.rs  handlers.rs  mod.rs  state.rs
src/models/: alias.rs  mod.rs  snippet.rs
src/storage/: alias_store.rs  mod.rs  snippet_store.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: help_dialog.rs  input_dialog.rs  list_item.rs  mod.rs  search_bar.rs  status_bar.rs  tabs.rs
src/utils/: mod.rs  terminal.rs  update.rs
