[package]
name = "sniplias"
version = "0.3.8"
edition = "2021"
authors = ["otomay"]
description = "A beautiful TUI for managing shell aliases and command snippets"
license = "MIT"
repository = "https://github.com/otomay/sniplias"
homepage = "https://github.com/otomay/sniplias"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "6.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.15"

[[bin]]
name = "sniplias"
test = false
bench = false